--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 # user experiments directory
 YOLOX_outputs/
 datasets/
+example_video/
+
 
 # temporary files which can be created if a process still has a handle open of a deleted file
 .fuse_hidden*
