add yolox outputs

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,10 @@
 *~
 
 # user experiments directory
-YOLOX_outputs/
+#YOLOX_outputs/
 datasets/
 example_video/
+*.MP4
 
 
 # temporary files which can be created if a process still has a handle open of a deleted file
