--- a/demo/TensorRT/cpp/CMakeLists.txt
+++ b/demo/TensorRT/cpp/CMakeLists.txt
@@ -13,11 +13,9 @@ find_package(CUDA REQUIRED)
 include_directories(${PROJECT_SOURCE_DIR}/include)
 # include and link dirs of cuda and tensorrt, you need adapt them if yours are different
 # cuda
-#include_directories(/data/cuda/cuda-10.2/cuda/include)
-include_directories(/usr/local/cuda/cuda-10.2/include)
-link_directories(/usr/local/cuda/cuda-10.2/lib64)
+include_directories(/data/cuda/cuda-10.2/cuda/include)
+link_directories(/data/cuda/cuda-10.2/cuda/lib64)
 # cudnn
-#include_directories(/data/cuda/cuda-10.2/cudnn/v8.0.4/include)
 include_directories(/data/cuda/cuda-10.2/cudnn/v8.0.4/include)
 link_directories(/data/cuda/cuda-10.2/cudnn/v8.0.4/lib64)
 # tensorrt
