--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ example_video/
 *.MP4
 *.mp4
 vis_res
+train_log.txt
 
 
 # temporary files which can be created if a process still has a handle open of a deleted file
